plugins/kotlin/idea/tests/testData/gradle/multiplatform/core/tier1/pureJavaConsumesKmmLibBinary/kmmLib/src/jvmMain/kotlin/test/kmmLib_jvmMain_api.kt
package test

actual class <!LINE_MARKER("descr='Has expects in project.kmmLib.commonMain module'")!>CommonMainExpect<!> {
    actual fun <!LINE_MARKER("descr='Has expects in project.kmmLib.commonMain module'")!>commonApi<!>() { }

    fun jvmApi() { }
}

fun produceJvmMainExpect(): CommonMainExpect = null!!
fun consumeJvmMainExpect(e: CommonMainExpect) {}
